now ignoring OS2ilm users when generating deactivate and delete orders